# Uniform-sample-generator

./: AngleCalc.h  BoolToString.C  CMakeLists.txt  CodeRun.cpp  ConfigBeamE.cpp  ConfigPrefix.cpp  ConfigTopDir.cpp  ConfigTopDir_Tester_e.cpp  DisplyText.C  Generate_uniform_event.C  Generate_uniform_event_e_tester.C  Histograms.cpp  Histograms.h  Run.cpp  Uniform_LUND.C  Uniform_sample_generator.C  Uniform_sample_generator_e_tester.C  addParticle.C  generate-genieLUNDfiles.sh  generate_protons.C  main.cpp  run.sh  targets.h
Original/: generate_neutrons.C
OutPut_Tester_e/: Uniform_1e_sample_2070MeV_plots.root  Uniform_1e_sample_5986MeV_plots.root
OutPut_Tester_e/lundfiles/: Uniform_1e_sample_2070MeV_1.txt  Uniform_1e_sample_2070MeV_10.txt  Uniform_1e_sample_2070MeV_2.txt  Uniform_1e_sample_2070MeV_3.txt  Uniform_1e_sample_2070MeV_4.txt  Uniform_1e_sample_2070MeV_5.txt  Uniform_1e_sample_2070MeV_6.txt  Uniform_1e_sample_2070MeV_7.txt  Uniform_1e_sample_2070MeV_8.txt  Uniform_1e_sample_2070MeV_9.txt  Uniform_1e_sample_5986MeV_1.txt  Uniform_1e_sample_5986MeV_10.txt  Uniform_1e_sample_5986MeV_2.txt  Uniform_1e_sample_5986MeV_3.txt  Uniform_1e_sample_5986MeV_4.txt  Uniform_1e_sample_5986MeV_5.txt  Uniform_1e_sample_5986MeV_6.txt  Uniform_1e_sample_5986MeV_7.txt  Uniform_1e_sample_5986MeV_8.txt  Uniform_1e_sample_5986MeV_9.txt
lundfiles/: test.lund  test2.lund
